RendererWork, introduced Pipelines and removed VertexArray

--- a/Ungine/Ungine.vcxproj
+++ b/Ungine/Ungine.vcxproj
@@ -173,19 +173,22 @@
     <ClInclude Include="src\Ungine\EntryPoint.h" />
     <ClInclude Include="src\Ungine\ImGui\ImGuiLayer.h" />
     <ClInclude Include="src\Ungine\ImGui\ImGuizmo.h" />
-    <ClInclude Include="src\Ungine\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Ungine\Platform\OpenGL\OpenGLFramebuffer.h" />
+    <ClInclude Include="src\Ungine\Platform\OpenGL\OpenGLIndexBuffer.h" />
+    <ClInclude Include="src\Ungine\Platform\OpenGL\OpenGLPipeline.h" />
     <ClInclude Include="src\Ungine\Platform\OpenGL\OpenGLRenderPass.h" />
     <ClInclude Include="src\Ungine\Platform\OpenGL\OpenGLShader.h" />
     <ClInclude Include="src\Ungine\Platform\OpenGL\OpenGLShaderUniform.h" />
     <ClInclude Include="src\Ungine\Platform\OpenGL\OpenGLTexture.h" />
-    <ClInclude Include="src\Ungine\Platform\OpenGL\OpenGLVertexArray.h" />
+    <ClInclude Include="src\Ungine\Platform\OpenGL\OpenGLVertexBuffer.h" />
     <ClInclude Include="src\Ungine\Platform\Windows\WindowsWindow.h" />
-    <ClInclude Include="src\Ungine\Renderer\Buffer.h" />
+    <ClInclude Include="src\Ungine\Renderer\VertexBuffer.h" />
     <ClInclude Include="src\Ungine\Renderer\Camera.h" />
     <ClInclude Include="src\Ungine\Renderer\Framebuffer.h" />
+    <ClInclude Include="src\Ungine\Renderer\IndexBuffer.h" />
     <ClInclude Include="src\Ungine\Renderer\Material.h" />
     <ClInclude Include="src\Ungine\Renderer\Mesh.h" />
+    <ClInclude Include="src\Ungine\Renderer\Pipeline.h" />
     <ClInclude Include="src\Ungine\Renderer\RenderCommandQueue.h" />
     <ClInclude Include="src\Ungine\Renderer\RenderPass.h" />
     <ClInclude Include="src\Ungine\Renderer\Renderer.h" />
@@ -195,7 +198,6 @@
     <ClInclude Include="src\Ungine\Renderer\Shader.h" />
     <ClInclude Include="src\Ungine\Renderer\ShaderUniform.h" />
     <ClInclude Include="src\Ungine\Renderer\Texture.h" />
-    <ClInclude Include="src\Ungine\Renderer\VertexArray.h" />
     <ClInclude Include="src\Ungine\Scene\Components.h" />
     <ClInclude Include="src\Ungine\Scene\Entity.h" />
     <ClInclude Include="src\Ungine\Scene\Scene.h" />
@@ -281,19 +283,21 @@
     <ClCompile Include="src\Ungine\ImGui\ImGuiBuild.cpp" />
     <ClCompile Include="src\Ungine\ImGui\ImGuiLayer.cpp" />
     <ClCompile Include="src\Ungine\ImGui\ImGuizmo.cpp" />
-    <ClCompile Include="src\Ungine\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Ungine\Platform\OpenGL\OpenGLFramebuffer.cpp" />
+    <ClCompile Include="src\Ungine\Platform\OpenGL\OpenGLIndexBuffer.cpp" />
+    <ClCompile Include="src\Ungine\Platform\OpenGL\OpenGLPipeline.cpp" />
     <ClCompile Include="src\Ungine\Platform\OpenGL\OpenGLRenderPass.cpp" />
     <ClCompile Include="src\Ungine\Platform\OpenGL\OpenGLRendererAPI.cpp" />
     <ClCompile Include="src\Ungine\Platform\OpenGL\OpenGLShader.cpp" />
     <ClCompile Include="src\Ungine\Platform\OpenGL\OpenGLShaderUniform.cpp" />
     <ClCompile Include="src\Ungine\Platform\OpenGL\OpenGLTexture.cpp" />
-    <ClCompile Include="src\Ungine\Platform\OpenGL\OpenGLVertexArray.cpp" />
+    <ClCompile Include="src\Ungine\Platform\OpenGL\OpenGLVertexBuffer.cpp" />
     <ClCompile Include="src\Ungine\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Ungine\Platform\Windows\WindowsWindow.cpp" />
-    <ClCompile Include="src\Ungine\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\Ungine\Renderer\VertexBuffer.cpp" />
     <ClCompile Include="src\Ungine\Renderer\Camera.cpp" />
     <ClCompile Include="src\Ungine\Renderer\Framebuffer.cpp" />
+    <ClCompile Include="src\Ungine\Renderer\IndexBuffer.cpp" />
     <ClCompile Include="src\Ungine\Renderer\Material.cpp" />
     <ClCompile Include="src\Ungine\Renderer\Mesh.cpp" />
     <ClCompile Include="src\Ungine\Renderer\RenderCommandQueue.cpp" />
@@ -303,7 +307,7 @@
     <ClCompile Include="src\Ungine\Renderer\SceneRenderer.cpp" />
     <ClCompile Include="src\Ungine\Renderer\Shader.cpp" />
     <ClCompile Include="src\Ungine\Renderer\Texture.cpp" />
-    <ClCompile Include="src\Ungine\Renderer\VertexArray.cpp" />
+    <ClCompile Include="src\Ungine\Renderer\Pipeline.cpp" />
     <ClCompile Include="src\Ungine\Scene\Entity.cpp" />
     <ClCompile Include="src\Ungine\Scene\Scene.cpp" />
     <ClCompile Include="src\Ungine\Scene\SceneCamera.cpp" />
