--- a/UngineEditor/imgui.ini
+++ b/UngineEditor/imgui.ini
@@ -15,19 +15,19 @@ Collapsed=0
 
 [Window][Model]
 Pos=0,424
-Size=429,379
+Size=420,379
 Collapsed=0
 DockId=0x0000000E,1
 
 [Window][Environment]
-Pos=2262,695
-Size=298,666
+Pos=2186,695
+Size=374,666
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Viewport]
-Pos=431,65
-Size=1829,1296
+Pos=422,65
+Size=1762,1296
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -51,13 +51,13 @@ DockId=0xFA06BC56,1
 
 [Window][Scene Hierarchy]
 Pos=0,24
-Size=429,398
+Size=420,398
 Collapsed=0
 DockId=0x0000000D,0
 
 [Window][Properties]
 Pos=0,805
-Size=429,556
+Size=420,556
 Collapsed=0
 DockId=0x00000008,0
 
@@ -68,35 +68,41 @@ Size=710,397
 Collapsed=0
 
 [Window][Toolbar]
-Pos=431,24
-Size=1829,39
+Pos=422,24
+Size=1762,39
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Script Engine Debug]
-Pos=2262,24
-Size=298,669
+Pos=2186,24
+Size=374,669
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Materials]
 Pos=0,424
-Size=429,379
+Size=420,379
 Collapsed=0
 DockId=0x0000000E,0
 
+[Window][Physics]
+Pos=1640,24
+Size=280,502
+Collapsed=0
+DockId=0x00000003,1
+
 [Docking][Data]
 DockSpace       ID=0xFA06BC56 Window=0x4647B76E Pos=0,53 Size=2560,1337 Split=X Selected=0x995B0CF8
-  DockNode      ID=0x00000005 Parent=0xFA06BC56 SizeRef=322,1363 Split=Y Selected=0x9A68760C
+  DockNode      ID=0x00000005 Parent=0xFA06BC56 SizeRef=315,1363 Split=Y Selected=0x9A68760C
     DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=594,794 Split=Y Selected=0x9A68760C
       DockNode  ID=0x0000000D Parent=0x00000007 SizeRef=450,298 Selected=0x9A68760C
       DockNode  ID=0x0000000E Parent=0x00000007 SizeRef=450,284 Selected=0x19E69416
     DockNode    ID=0x00000008 Parent=0x00000005 SizeRef=594,567 Selected=0xC89E3217
-  DockNode      ID=0x00000006 Parent=0xFA06BC56 SizeRef=1596,1363 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=1371,1363 Split=Y Selected=0x995B0CF8
+  DockNode      ID=0x00000006 Parent=0xFA06BC56 SizeRef=1603,1363 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=1321,1363 Split=Y Selected=0x995B0CF8
       DockNode  ID=0x00000009 Parent=0x00000001 SizeRef=1687,39 HiddenTabBar=1 Selected=0x507852CA
       DockNode  ID=0x0000000A Parent=0x00000001 SizeRef=1687,962 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
-    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=223,1363 Split=Y Selected=0x2196E357
+    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=280,1363 Split=Y Selected=0x2196E357
       DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=559,682 Selected=0x2196E357
       DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=559,679 Selected=0xC0BA51F5
 
